--- a/blazor/wwwroot/css/Shared/UI/Toasts/GenericToasts.css
+++ b/blazor/wwwroot/css/Shared/UI/Toasts/GenericToasts.css
@@ -8,7 +8,7 @@
     padding: 16px;
     position: fixed;
     z-index: 1;
-    right: 50px;
+    right: 5%;
     bottom: 30px;
     font-size: 17px;
     color:white;
