--- a/blazor/Pages/Index.razor
+++ b/blazor/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using ApiServices.Security
 @using blazor.Models.Security
 @using blazor.Providers
-@using Policies
+@using blazor.Enums.Security
 @inject AuthenticationStateProvider _authenticationStateProvider
 @inject NavigationManager _navigationManager
 
